<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navMovie"
        android:title="@string/movie"
        android:icon="@drawable/ic_now_playing"/>

    <item
        android:id="@+id/navTv"
        android:title="@string/tv_show"
        android:icon="@drawable/ic_tv"/>

    <item
        android:id="@+id/navFavorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite"/>

</menu>